# Haskell-Calculator

./: .gitignore  Application.hs  Main.hs  README.md  client_session_key.aes
Haskell Calculator/: App.hs  CalcStructure.hs  Foundation.hs  Main.hs  README.md  haskellcalculator.cabal  routes  stack.yaml  webcalculator.cabal
Haskell Calculator/Database/: DBConnection.hs
Haskell Calculator/Handler/: Add.hs  Calculations.hs  Divide.hs  Home.hs  Multiply.hs  Subtract.hs
Haskell Calculator/Operation/: Add.hs  Calculations.hs  Divide.hs  Home.hs  Multiply.hs  Subtract.hs
Haskell Calculator/Settings/: StaticFiles.hs
Haskell Calculator/static/: form.js  layoutCSS.css
Haskell Calculator/temp/: home.html  layout.html
Haskell Calculator/templates/: home.html  layout.html
